[GTK] Remote inspector server should send an error page if resources not found https://bugs.webkit.org/show_bug.cgi?id=117137

Patch by Anton Obzhirov <a.obzhirov@samsung.com> on 2013-07-15
Reviewed by Gustavo Noronha Silva.

Sometimes it is difficult to understand why remote inspector fails to deliver the content.
This patch gives an option to show error page with some basic explanation.

* UIProcess/InspectorServer/gtk/WebInspectorServerGtk.cpp:
(WebKit::WebInspectorServer::platformResourceForPath):

Canonical link: https://commits.webkit.org/136569@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@152633 268f45cc-cd09-0410-ab3c-d52691b4dbfc